[project]
name = "numpy-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "mysql-connector-python>=9.7.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
